# git-gui

./: .gitignore  Cargo.toml  README.md
.clawhub/: lock.json
.github/workflows/: ci.yml  release.yml
crates/gitcore/: Cargo.toml
crates/gitcore/src/: blame.rs  branch.rs  clean.rs  clone.rs  commit.rs  config.rs  conflict.rs  diff.rs  diff3.rs  error.rs  git.rs  hunk.rs  lib.rs  log.rs  precommit.rs  push.rs  rebase.rs  reflog.rs  remote.rs  reset.rs  resolve.rs  stage.rs  stash.rs  status.rs  submodule.rs  tags.rs  topology.rs  update.rs
crates/gitcore/tests/: integration.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  branch_ui.rs  cli.rs  clipboard.rs  conflict_ui.rs  diff_ui.rs  filetree.rs  keys.rs  log_ui.rs  main.rs  scroll.rs  stage_ui.rs  stash_ui.rs  submodule_ui.rs
docs/: USAGE.md  execution-progress-cancel-design.md  gui-backlog.md  gui-dev-guide.md  multi-repo-design.md  multi-repo-test-plan.md  perf-future.md
docs/superpowers/plans/: 2026-06-26-ai-diff-multirequest.md
docs/superpowers/specs/: 2026-06-26-ai-diff-multirequest-design.md
gui/: .gitignore  README.md  package-lock.json  package.json  update-key.pub
gui/src/: app.html
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: conflict.json  default.json
gui/src-tauri/src/: ai.rs  lib.rs
gui/src/lib/: BlameView.svelte  BranchPicker.svelte  CleanDialog.svelte  CloneDialog.svelte  CommonBranchPicker.svelte  ConflictView.svelte  DiffView.svelte  FileHistory.svelte  FileIcon.svelte  FileTree.svelte  (+19 more)
scripts/: build-manifest.mjs  qa-submodule-update.sh
(+14 files in other folders)
